--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-columns": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-number-format": "^4.4.1",
     "react-scripts": "3.4.1"
   },
@@ -39,7 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
