--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react-bootstrap": "^1.0.1",
     "react-columns": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-iframe": "^1.8.0",
     "react-moment": "^0.9.7",
     "react-number-format": "^4.4.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
