--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-columns": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-iframe": "^1.8.0",
